# newosxbook-tools

./: .gitignore  02_decompress.c  17-1-lsock.c  19-4-iter.c  3-filemon-old.c  4-5-interpose.c  6-bonus.c  8-joker.c  CMakeLists.txt  Makefile_sbtools  PE_state.d  README.md  amfidebilitate.c  compileCTF.sh  cs.c  csops.c  d.d  dt.h  fbt.d  gcc-arm64.sh  ioreg.c  joker.c  kmem.sh  lsock.c  m1.c  mistool.c  ota.c  p.c  pe.d  platformize.c  power.c  sandbox_exec.c  sbtool.c  seedutil.m  smut.c  stackshot.c  tbdize.sh  zones.sh
dtrace/: kmem.d  proctest.d  zones.d
include/: SMBIOS.h  lsock.h  lzss.h  sandbox.h
src/: 12-1-vmmap.c  17-1-lsock.c  17-25-bpf.c  18-1-JKextstat.c  5-2-stack-snapshot.c  6-bonus.c  bat.c  dtize.c  dyld_example.c  filemon.c  gcd.c  inject.c  jurple_console.c  kmem.c  ktrace_example.c  ls.m  lsdtrip.m  lsock.c  lstacks.c  lzss.c  mach_task_for_pid.c  msg.c  mslist.c  netbottom.c  ojtool.c  sandbox_exec.c  sbtool.c  shaihulud.c  smut.c  utun.c
